--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                           <a class="nav-link" href="./contact.html"target="_self">Contact</a>
                         </li>
+                        <li class="nav-item">
+                                <a class="nav-link" href="./Wedding Site main page.html"target="_self">De wedding Brides</a>
+                              </li>
                       </ul>
                     </div>
                   </nav>
