--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                     </div>
                   </nav>
                   <br>
+                  <p>
+                      Hallo mijn naam is Jordi van der Laag, momenteel studeer ik HBO-ICT aan het NHL-stenden. 
+                      Ik ben een vrolijke positieve jongeman die altijd met volle inzet ergens voor gaat.
+                      Mijn motivatie om deze studie te kiezen was dat ik altijd al veel bezig was met dingen hierom heen.
+                      Daarom leek dit de perfecte studie voor mij.
+                  </p>
+                  <br>
             <table>
                     <tr>
                         <th>Curriculum Vitae Jordi</th>
